<resources>
    <string name="app_name">Task iQ</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">New password</string>
    <string name="hint_password1">Password</string>
    <string name="hint_password2">Confirm new password</string>
    <string name="hint_firstname">First name</string>
    <string name="hint_surname">Surname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="btn_link_to_register">Not a member? Register now.</string>
    <string name="btn_link_to_password_reset">Forgotten Password?</string>
    <string name="btn_pass_reset">PASSWORD RESET</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="catTitle_hint">Category Title</string>
    <string name="hint_userID">User ID</string>
    <string name="btn_Save">Save</string>
    <string name="btn_upload">Upload</string>
    <string name="hint_feedback">Feedback</string>
    <string name="hint_uploadHeader">Please provide a summary for the Category. Include any Tag words as the summary will be used for search request.</string>
    <string name="hint_UploadSum">Category Summary:</string>
    <string name="hint_RemExpiry">Expiry Date:</string>
    <string name="hint_remTitle">Reminder Title:</string>
    <string name="hint_remNotes">Reminder Notes:</string>
    <string name="app_label">Task iQ</string>
    <string name="search_hint">Search....</string>
    <string name="btn_lifeIQ">Task iQ Downloads</string>
    <string name="btn_topCat">Top Downloads</string>
    <string name="btn_send">Send</string>
    <string name="hint_uploadblank">Please leave this field blank.</string>
    <string name="hint_imageUpload">Select to upload image from gallery.</string>
    <string name="hint_catdesc">Category Description (optional)</string>
    <string name="hint_Remdesc">Reminder Description</string>
    <string name="remTitle_hint">Reminder Title</string>
    <string name="additional_reminders">Additional Reminders under this Category can be added from the main page</string>
    <string name="hint_Remdate">Reminder Date:</string>
    <string name="hint_RemNotes">Reminder Notes</string>
    <string name="string_CatTitle">Category Title:</string>
    <string name="string_CatDesc">Category Description: (optional)</string>
    <string name="string_ActivationDate">Activation Date Required?</string>
    <string name="hint_TitleActivationDate">Title for Activation Date</string>
    <string name="btn_link_to_login">Already registred! Login.</string>
    <string name="btn_back_to_login">Back to login page.</string>
    <string name="hint_Catergory">Catergory</string>
    <string name="hint_Description">Description</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="btn_next">Next</string>
    <string name="string_ActivationDateExplain">The Activation Date will be used to populate the Reminder dates.</string>
    <string name="string_ActivationDateTitleExplain">Please provide information in relation to the Activation Date if selected Yes.</string>
    <string name="btn_back">Back</string>
    <string name="btn_create">Create</string>
    <string name="hint_DaysRemdate">Days to Reminder. Select for more info.....</string>
    <string name="hint_DaysRemExpiry">Days to Expiry. Select for more info.....</string>
    <string name="hint_AddImage">Add a image:</string>
    <string name="btn_share">Share</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hello">Hello World, ImageTextListViewActivity!</string>
    <string name="name1">ListViewBaseAdapter</string>
    <string name="image">Thumbnail</string>
    <string name="select">Select a country</string>
    <string name="hint_remHeader">Add details for the Reminder</string>
    <string name="action_add">Add a category</string>
    <string name="action_logout">Logout</string>
    <string name="action_ContactUs">Contact Us</string>
    <string name="action_settings">Settings</string>
    <string name="action_archivedCategories">Archived Categories</string>
    <string name="action_info">Info</string>
    <string name="action_subhidprt">Hidden Categories</string>
    <string name="action_archivedproduct">Archived Reminders</string>
    <string name="action_archive">Archive</string>
    <string name="action_delete">Delete</string>
    <string name="action_updateCat">Update</string>
    <string name="hint_ActDate">Activation Date:</string>
    <string name="hint_ActDateText">Title for Activation Date:</string>
    <string name="hint_ActDateExplain">Explanation for Activation Date</string>
    <string name="action_edit">Edit</string>
    <string name="action_renew">Renew</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="spinner_title">Select a Country</string>
    <string name="hint_EULA">Please read and accept End User License Agreement.</string>
</resources>