<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">



    <!-- Update Category -->
    <item android:id="@+id/action_updateCat"
        android:title="@string/action_updateCat"
        app:showAsAction="always"
        android:icon="@mipmap/ic_system_update_alt_black_24dp" />

    <!-- Delete Reminder -->
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@mipmap/ic_delete_black_24dp"
        app:showAsAction="ifRoom" />


    <!-- Information/ will display always -->
    <item android:id="@+id/action_info"
        android:icon="@mipmap/ic_info_outline_black_24dp"
        android:title="@string/action_info"
        app:showAsAction="ifRoom"/>

    <!--  android:orderInCategory="100" -->
</menu>