<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"

    android:orientation="vertical"
    android:padding="10dp">



    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:weightSum="1"
        >





        <EditText
            android:id="@+id/CategoryTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/catTitle_hint"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:maxLength="35"/>




        <EditText
            android:id="@+id/CategoryDesc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_catdesc"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"

            android:maxLength="35"/>

        <TextView
            android:id="@+id/activationDate1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:text="@string/string_ActivationDate"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/input_login"/>

        <Spinner
            android:id="@+id/ActivationDateSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:spinnerMode="dropdown"
            android:textColor="@color/input_login"/>

        <TextView
            android:id="@+id/activationDateExplained"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:text="@string/string_ActivationDateExplain"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/input_login"/>

        <EditText
            android:id="@+id/ActivationDateTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:hint="@string/hint_TitleActivationDate"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"
            android:maxLength="100" />

        <TextView
            android:id="@+id/activationDateTitleExplained"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:text="@string/string_ActivationDateTitleExplain"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@color/input_login"/>


        <!-- Next Button -->

        <Button
            android:id="@+id/BtnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@color/white"
            android:text="@string/btn_next"
           />




    </LinearLayout>





</LinearLayout>

    </ScrollView>